--- a/bai1.html
+++ b/bai1.html
@@ -15,6 +15,7 @@
       }
       table {
         margin-left: 10px;
+        width: 100%;
       }
       input {
         width: 85%;
@@ -43,7 +44,7 @@
         that we add to our store regularly.
       </p>
       <form action="">
-        <table width="100%" cellspacing="0" cellpadding="4">
+        <table cellspacing="0" cellpadding="4">
           <tr>
             <th>First name</th>
             <th>Last name</th>
@@ -78,9 +79,9 @@
           <tr>
             <td><input type="text" name="zip" /></td>
             <td>
-              <select name="country" id="">
-                <option value="value1">United Kingdom</option>
-                <option value="value2">United State</option>
+              <select name="country">
+                <option value="uk">United Kingdom</option>
+                <option value="us">United State</option>
               </select>
             </td>
           </tr>
